hphp/hack/test/typecheck/reactive/mutable_override5.php.exp
File "mutable_override5.php", line 10, characters 19-19:
Member f has the wrong type (Typing[4341])
File "mutable_override5.php", line 4, characters 23-24:
Incompatible mutabilities:
File "mutable_override5.php", line 4, characters 23-24:
This parameter is immutable
File "mutable_override5.php", line 10, characters 36-37:
This parameter is mutable
